--- a/jarvis/package.json
+++ b/jarvis/package.json
@@ -13,6 +13,17 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/three": "^0.149.0",
+    "@uiw/codemirror-extensions-color": "^4.19.9",
+    "@uiw/codemirror-extensions-langs": "^4.19.9",
+    "@uiw/codemirror-theme-bespin": "^4.19.9",
+    "@uiw/codemirror-theme-dracula": "^4.19.9",
+    "@uiw/codemirror-theme-duotone": "^4.19.9",
+    "@uiw/codemirror-theme-github": "^4.19.9",
+    "@uiw/codemirror-theme-okaidia": "^4.19.9",
+    "@uiw/codemirror-theme-vscode": "^4.19.9",
+    "@uiw/codemirror-theme-xcode": "^4.19.9",
+    "@uiw/react-codemirror": "^4.19.9",
+    "axios": "^1.3.4",
     "framer-motion": "^9.0.4",
     "framer-motion-3d": "^9.0.4",
     "react": "^18.2.0",
