--- a/jarvis/package.json
+++ b/jarvis/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@codemirror/lang-cpp": "^6.0.2",
+    "@codemirror/lang-java": "^6.0.1",
+    "@codemirror/lang-javascript": "^6.1.4",
+    "@codemirror/lang-python": "^6.1.2",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.9",
@@ -24,6 +28,7 @@
     "@uiw/codemirror-theme-xcode": "^4.19.9",
     "@uiw/react-codemirror": "^4.19.9",
     "axios": "^1.3.4",
+    "buffer": "^6.0.3",
     "framer-motion": "^9.0.4",
     "framer-motion-3d": "^9.0.4",
     "react": "^18.2.0",
