--- a/jarvis/package.json
+++ b/jarvis/package.json
@@ -9,9 +9,11 @@
     "@codemirror/lang-python": "^6.1.2",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@iconify/icons-bi": "^1.2.15",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
     "@mui/styled-engine-sc": "^5.11.9",
+    "@react-icons/all-files": "^4.1.0",
     "@react-three/fiber": "^8.11.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -33,6 +35,7 @@
     "framer-motion-3d": "^9.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
     "react-uuid": "^2.0.0",
